# agent-skeleton

./: .gitignore  README.md  pyproject.toml
agentos/: __init__.py  agent.py  cli.py  coordinator.py  executor.py  hitl.py  memory.py  protocols.py  provider.py  skills.py  telemetry.py  tools.py  types.py  web.py
agentos/providers/: __init__.py  context.py  memory.py  ollama.py
evals/: cases.py  harness.py  run.py
examples/: background_basic.py  background_defer_resume.py  background_interrupt.py  multi_agent.py  pr_reviewer.py  research_agent.py  sandbox_demo.py  session_demo.py  simple_skill.py  vector_memory.py
nerve/: __init__.py  agent.py  cli.py  hitl.py  protocols.py  skills.py  telemetry.py  web.py
nerve/providers/: coordinator.py  memory.py  ollama.py  retry.py  sandbox.py
nerve/ux/: __init__.py  cli.py  web.py
tests/: test_agent.py  test_async.py  test_background.py  test_context.py  test_coordinator.py  test_executor.py  test_hitl.py  test_interruption.py  test_memory.py  test_provider.py  test_research_integration.py  test_retry.py  test_sandbox.py  test_session.py  test_skills.py  test_streaming.py  test_telemetry.py  test_tools.py  test_types.py  test_vector_memory.py  test_version.py
