[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agent-skeleton"
version = "0.1.0"
description = "Thin, extensible agent framework with reasonable defaults"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Vishu Gupta", email = "gupta.vishu@gmail.com" }]
dependencies = ["httpx>=0.27.0"]

[project.scripts]
agentos = "agentos.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4.0"]
