[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-skeleton"
version = "0.1.0"
description = "Thin, extensible agent framework with reasonable defaults"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Vishu Gupta", email = "gupta.vishu@gmail.com" }]
dependencies = []

[tool.setuptools.packages.find]
include = ["agentos*"]

[project.scripts]
agentos = "agentos.cli:main"

[project.optional-dependencies]
ollama = ["httpx>=0.27.0"]
web = ["fastapi>=0.115.0", "uvicorn>=0.32.0"]
dev = ["pytest>=8.0", "ruff>=0.4.0"]
all = ["agentos[ollama,web]"]
