[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nerve"
version = "0.1.0"
description = "Thin, extensible agent framework with reasonable defaults"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Vishu Gupta", email = "gupta.vishu@gmail.com" }]
dependencies = []

[tool.setuptools.packages.find]
include = ["nerve*"]

[project.scripts]
nerve = "nerve.cli:main"

[project.optional-dependencies]
ollama = ["httpx>=0.27.0"]
web = ["fastapi>=0.115.0", "uvicorn>=0.32.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "ruff>=0.4.0"]
all = ["nerve[ollama,web]"]
